--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,8 +9,12 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <script src="main.js" type="text/javascript"></script>
+        <div id="table"></div>
+        <div id="graph"></div>
+        <div id="maps"></div>
     </body>
 </html>
