--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,26 @@ and open the template in the editor.
     </head>
     <body>
         <script src="main.js" type="text/javascript"></script>
-        <div id="table"></div>
+        <div id="table">
+            <!--
+            <div>
+                    <tr>
+                        <td rowspan="2">1550</td>
+                        <td>rubi</td>
+                        <td>50</td>
+                        <td>10</td>
+                        <td>60</td>
+                    </tr>
+                    <tr>
+                        <td>rubi2</td>
+                        <td>50</td>
+                        <td>10</td>
+                        <td>60</td>
+                    </tr>
+                </div>
+                
+            </table>-->
+        </div>
         <div id="graph"></div>
         <div id="maps"></div>
     </body>
