--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,13 +9,26 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <script src="main.js" type="text/javascript"></script>
         <div id="table">
-            <!--
-            <div>
+            <!--<table border="2">
+                <div>
+                    <tr>
+                        <th rowspan="2">Año</th>
+                        <th rowspan="2">Lugar</th>
+                        <th colspan="3"> Sexos </th>
+                    </tr>
+                    <tr>
+
+                        <th>Hombre</th>
+                        <th>Mujer</th>
+                        <th>Hombre y Mujer</th>
+                    </tr>
+                </div>
+                <div>
                     <tr>
                         <td rowspan="2">1550</td>
                         <td>rubi</td>
@@ -30,7 +43,7 @@ and open the template in the editor.
                         <td>60</td>
                     </tr>
                 </div>
-                
+
             </table>-->
         </div>
         <div id="graph"></div>
