--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,9 +10,13 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     </head>
     <body>
         <script src="main.js" type="text/javascript"></script>
+        <script src="table.js" type="text/javascript"></script>
+        <script src="stats.js" type="text/javascript"></script>
+        <h1 id="title"></h1>
         <div id="table">
             <!--<table border="2">
                 <div>
