--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,11 +11,13 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     </head>
     <body>
-        <script src="main.js" type="text/javascript"></script>
         <script src="table.js" type="text/javascript"></script>
         <script src="stats.js" type="text/javascript"></script>
+        <script src="mapa.js" type="text/javascript"></script>
+        <script src="main.js" type="text/javascript"></script>
         <h1 id="title"></h1>
         <div id="table">
             <!--<table border="2">
@@ -51,6 +53,8 @@ and open the template in the editor.
             </table>-->
         </div>
         <div id="graph"></div>
-        <div id="maps"></div>
+        <div id="myMap" style="height: 600px;">
+            <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+        </div>
     </body>
 </html>
