--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,53 +8,38 @@ and open the template in the editor.
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
+        <link href="css.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     </head>
     <body>
+        <h1 id="title"></h1>
+        <p id="subtitle"></p>
+        <div id="buttons" style="display: none;">
+            <button id="mostrarTabla">Mostrar Tabla</button>
+            <button id="mostrarGraph">Mostrar Gráfica</button>
+            <button id="mostrarMapa">Mostrar Mapa</button>
+        </div>
+        <br>
+        
+        <div id="tipoTabla">
+            <select id="tablaYear">
+            </select>
+            <button id="mostrarUnFecha">Mostrar Por Fecha</button><br>
+        </div>
+        <br>
+        <div id="table"></div>
+        <div id="graphPie"></div>
+        <br>
+        <div id="graphBar"></div>
+        <div id="myMap" style="height: 600px;">
+            <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+        </div>
         <script src="table.js" type="text/javascript"></script>
         <script src="stats.js" type="text/javascript"></script>
         <script src="mapa.js" type="text/javascript"></script>
         <script src="main.js" type="text/javascript"></script>
-        <h1 id="title"></h1>
-        <div id="table">
-            <!--<table border="2">
-                <div>
-                    <tr>
-                        <th rowspan="2">Año</th>
-                        <th rowspan="2">Lugar</th>
-                        <th colspan="3"> Sexos </th>
-                    </tr>
-                    <tr>
-
-                        <th>Hombre</th>
-                        <th>Mujer</th>
-                        <th>Hombre y Mujer</th>
-                    </tr>
-                </div>
-                <div>
-                    <tr>
-                        <td rowspan="2">1550</td>
-                        <td>rubi</td>
-                        <td>50</td>
-                        <td>10</td>
-                        <td>60</td>
-                    </tr>
-                    <tr>
-                        <td>rubi2</td>
-                        <td>50</td>
-                        <td>10</td>
-                        <td>60</td>
-                    </tr>
-                </div>
-
-            </table>-->
-        </div>
-        <div id="graph"></div>
-        <div id="myMap" style="height: 600px;">
-            <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
-        </div>
     </body>
 </html>
